welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: ';' expected but ')' found.
				if(lastModIndex + suite(lastModIndex)) <= num)
                                                                             ^